--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,6 +3,15 @@ spring:
     name: NHN Academy - Spring Boot JPA
   jackson:
     property-naming-strategy: SNAKE_CASE
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+  h2:
+    console:
+      enabled: true
   jpa:
     open-in-view: false
     show-sql: true
