--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,24 @@
-spring:
-  application:
-    name: TaskAPI
-  jackson:
-    property-naming-strategy: SNAKE_CASE
-  profiles:
-    active: dev
-    group:
-      dev: application-dev
-      prod: application-prod
-
-logging:
-  level:
-    org.hibernate.orm.jdbc.bind: trace
-    org.springframework.transaction.interceptor: trace
-
 server:
   port: 7070
+
+spring:
+  application:
+    name: Task
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+  h2:
+    console:
+      enabled: true
+
+  jpa:
+    open-in-view: false # Transactional auto false
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+
